# kbeacon-ota-tool

./: .gitignore  LICENSE  README.md  TODO.md  default.nix  flake.nix  install.sh  kbeacon-ota.cabal  settings.gradle.kts  setup-ios.sh
.github/workflows/: ci.yaml
android/: AndroidManifest.xml
android/java/me/jappie/otatool/: MainActivity.java
android/res/values/: strings.xml
app/: Main.hs  build.gradle.kts
app/src/androidTest/java/com/example/kbeaconpro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/kbeaconpro/: BeaconResult.kt  ConnState.kt  ErrorActivity.kt  MainActivity.kt  MainApplication.kt  ReportAdvPeriodState.kt  Scanner.kt  SetAdvPeriodState.kt
app/src/main/java/com/example/kbeaconpro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/kbeaconpro/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nix/: apk.nix  ci.nix  consumer-cabal2nix.nix  emulator-ui.nix  ios-app.nix  ios-device-app.nix  ios.nix  native.nix
nix/sources/: sources.json
src/: Main.hs
src/KBeacon/: Configure.hs  Json.hs  OtaApp.hs  Protocol.hs
test/: Test.hs
test/android/: kbeacon.sh  kbeacon_peripheral.py  report_server.py
