cabal-version: 3.0
name:          kbeacon-ota
version:       0.1.0.0
author:        Jappie Klooster
maintainer:    jappie.klooster@converge.io
license:       MIT
build-type:    Simple

common common-options
  default-extensions:
      OverloadedStrings
      ImportQualifiedPost
  ghc-options:
      -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language: Haskell2010

executable kbeacon-ota
  import:        common-options
  main-is:       Main.hs
  hs-source-dirs: src
  build-depends:
      base     >= 4.9 && < 5
    , hatter
    , text     < 3
    , containers < 1
